--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "carlosluiengo" # Username
+  linkedin         : "carlosluengo" # Username
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
