chore: update personal website URL in config and remove outdated conference post
Updated the personal website URL in the configuration file to "http://www.carluve.com" and deleted the markdown file for the DigEduCLM 2025 conference participation, as it is no longer relevant.

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   bio              : "AI researcher focused on applying machine learning to solve real-world challenges in education, business, and public services."
   location         : "Spain"
   employer         : "Universidad de Alcalá"
-  uri              : # URL
+  uri              : "http://www.carluve.com"
   email            : "carluve@outlook.com" 
 
   # Academic websites
