docs: update bio and work experience details
Update the author's bio to reflect a focus on Generative AI instead of machine learning. Additionally, revise job titles and descriptions in the CV to better align with current roles and responsibilities.

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "avatar-carlos.png"
   name             : "Carlos Luengo Vera"
   pronouns         : # example: "she/her"  
-  bio              : "AI researcher focused on applying machine learning to solve real-world challenges in education, business, and public services."
+  bio              : "AI researcher focused on applying Generative AI to solve real-world challenges in education, business, and public services."
   location         : "Spain"
   employer         : "Universidad de Alcalá"
   uri              : "http://www.carluve.com"
